--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="card-title">卸甲服務</div>
             <div class="segmented-control">
                 <div class="segment active" onclick="setRemoval(this, 0)">無</div>
-                <div class="segment" onclick="setRemoval(this, 150)">本店 (1501</div>
+                <div class="segment" onclick="setRemoval(this, 150)">本店 (150)</div>
                 <div class="segment" onclick="setRemoval(this, 300)">他店 (300)</div>
                 <div class="segment" onclick="setRemoval(this, 500)">純卸甲 (500)</div>
             </div>
@@ -381,4 +381,5 @@
     </script>
 </body>
 </html>
+
 
